<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjustesActivity">

    <CheckBox
        android:id="@+id/checkboxValoresNegativos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/texto_checkbox_valores_negativos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextValorPorDefectoContador"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/numero_cero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxValoresNegativos" />

    <EditText
        android:id="@+id/editTextValorIncrementoContador"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/numero_uno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValorPorDefectoContador" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/texto_editText_valor_por_defecto_contador"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextValorPorDefectoContador"
        app:layout_constraintStart_toEndOf="@+id/editTextValorPorDefectoContador" />

    <Button
        android:id="@+id/botonGuardarAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="accionBotonGuardarAjustes"
        android:text="@string/texto_boton_guardar_ajustes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/texto_editText_valor_incremento_contador"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextValorIncrementoContador"
        app:layout_constraintStart_toEndOf="@+id/editTextValorIncrementoContador" />
</androidx.constraintlayout.widget.ConstraintLayout>